# bot

./: .gitignore  .gitmodules  Dockerfile  README.md  config.py  config.yml.example  docker_run.sh  main.py  pyproject.toml  requirements.txt
core/: __init__.py  bot.py  context.py
extensions/: api.py  casino.py  general.py  giveaways.py  interactions.py  osu.py  owner.py  reminders.py  twitter.py  useful.py
extensions/games/: __init__.py  osu.py
extensions/internal/: __init__.py  api.py  background.py  errorhandler.py  help.py
logs/: web-config.json
logs/bot/: bot.config.yml
src/: config.py  main.py
src/core/: bot.py
utils/: db.py  logging.py  time.py
utils/buttons/: __init__.py
