[tool.poetry]
name = "bot-rewrite"
version = "0.1.0"
description = "bad bot"
authors = ["Your Name <you@example.com>"]
license = "MPL 2.0"

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.7.4"
asyncpg = "^0.23.0"
click = "^8.0.1"
"discord.py" = {git = "https://github.com/rapptz/discord.py", rev = "master"}
psutil = "^5.8.0"
python-dateutil = "^2.8.1"
jishaku = "^2.0.0"
PyYAML = "^5.4.1"
tabulate = "^0.8.9"
Hypercorn = "^0.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
