[tool.black]
line-length = 120
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 120


[tool.poetry]
name = "meizuBot"
version = "0.1.0"
description = "Discord Bot written by meizuflux#9688"
authors = ["Your Name <you@example.com>"]
license = "MPL 2.0"

[tool.poetry.dependencies]
python = "^3.9"
asyncpg = "^0.24.0"
click = "^8.0.1"
"discord.py" = {git = "https://github.com/rapptz/discord.py", rev = "master"}
psutil = "^5.8.0"
PyYAML = "^5.4.1"
tabulate = "^0.8.9"
jishaku = "^2.2.0"
pendulum = "^2.1.2"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
